wp-app/us-east-2/prod/wp-net/vpc.tf
resource "aws_vpc" "wp-vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true

  tags = {
    Name = "wp_vpc"
  }
}
